Use entitlement secret in smoke/acceptance tests

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -294,7 +294,7 @@ jobs:
         echo "CLUSTER_REPOSITORY=$CLUSTER_REPOSITORY" >> $GITHUB_ENV
 
         ./test/utils/scripts/ci-cluster-install.sh mccp $CLUSTER_REPOSITORY
-        kubectl port-forward -n mccp svc/my-mccp-nginx-ingress-controller 8090:80 &
+        kubectl port-forward -n wego-system svc/my-mccp-nginx-ingress-controller 8090:80 &
     - name: Setup wkp leaf cluster
       run: |
         kind create cluster --name my-wkp-leaf-cluster --image=kindest/node:v1.20.7 --config test/utils/data/kind-config.yaml --kubeconfig $MCCP_KIND_WKP_LEAF_KUBECONFIG
