--- a/charts/mccp/templates/clusters-service/clusters_service_viewer_rb.yaml
+++ b/charts/mccp/templates/clusters-service/clusters_service_viewer_rb.yaml
@@ -11,3 +11,17 @@ subjects:
     - kind: ServiceAccount
       name: {{ include "mccp.serviceAccountName" . }}
       namespace: {{ .Release.Namespace | quote }}
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+    name: clusters-service-viewer-role-default
+    namespace: {{ .Release.Namespace | quote }}
+roleRef:
+    apiGroup: rbac.authorization.k8s.io
+    kind: ClusterRole
+    name: clusters-service-viewer-role
+subjects:
+    - kind: ServiceAccount
+      name: {{ include "mccp.serviceAccountName" . }}
+      namespace: {{ .Release.Namespace | quote }}
