--- a/charts/mccp/templates/gitops-repo-broker/internal-ingress.yaml
+++ b/charts/mccp/templates/gitops-repo-broker/internal-ingress.yaml
@@ -1,26 +1,15 @@
 ---
-{{- if semverCompare ">=1.19-0" .Capabilities.KubeVersion.GitVersion -}}
-apiVersion: networking.k8s.io/v1
-{{- else if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
-apiVersion: networking.k8s.io/v1beta1
-{{- else -}}
-apiVersion: extensions/v1beta1
-{{- end }}
+apiVersion: {{ include "common.capabilities.ingress.apiVersion" . }}
 kind: Ingress
 metadata:
   annotations:
-    {{- if semverCompare "<1.19-0" .Capabilities.KubeVersion.GitVersion }}
     kubernetes.io/ingress.class: mccp-nginx
-    {{- end }}
     nginx.ingress.kubernetes.io/rewrite-target: /gitops/$1
   labels:
     app: gitops-repo-broker
   name: gitops-repo-broker
   namespace: {{ .Release.Namespace | quote }}
 spec:
-  {{- if semverCompare ">=1.19-0" .Capabilities.KubeVersion.GitVersion }}
-  ingressClassName: mccp-nginx
-  {{- end }}
   rules:
     - http:
         paths:
