--- a/charts/mccp/templates/clusters-service/internal-ingress.yaml
+++ b/charts/mccp/templates/clusters-service/internal-ingress.yaml
@@ -10,10 +10,12 @@ metadata:
   name: clusters-service
   namespace: {{ .Release.Namespace | quote }}
 spec:
+  {{- if and .Values.nginx-ingress-controller.ingressClass (include "common.ingress.supportsIngressClassname" .) }}
+  ingressClassName: {{ .Values.ingress.ingressClassName | quote }}
+  {{- end }}
   rules:
     - http:
         paths:
-          - backend:
-              serviceName: clusters-service
-              servicePort: 8000
-            path: /v1/?(.*)
+          - path: /v1/?(.*)
+            backend: {{- include "common.ingress.backend" (dict "serviceName" "clusters-service" "servicePort" 8000 "context" $)  | nindent 14 }}
+
