--- a/charts/mccp/templates/clusters-service/internal-ingress.yaml
+++ b/charts/mccp/templates/clusters-service/internal-ingress.yaml
@@ -3,7 +3,7 @@ apiVersion: {{ include "common.capabilities.ingress.apiVersion" . }}
 kind: Ingress
 metadata:
   annotations:
-    {{- if include "common.ingress.supportsIngressClassAnnotation" . }}
+    {{- if eq (include "common.ingress.supportsIngressClassAnnotation" .) "true" }}
     kubernetes.io/ingress.class: mccp-nginx
     {{- end }}
     nginx.ingress.kubernetes.io/rewrite-target: /v1/$1
@@ -12,7 +12,7 @@ metadata:
   name: clusters-service
   namespace: {{ .Release.Namespace | quote }}
 spec:
-  {{- if include "common.ingress.supportsIngressClassname" . }}
+  {{- if eq (include "common.ingress.supportsIngressClassname" .) "true" }}
   ingressClassName: mccp-nginx
   {{- end }}
   rules:
