--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -82,14 +82,13 @@ jobs:
       if: ${{ runner.os == 'Linux' }}
       run: |
           TAG=$(git describe --always --match "v*")
-          IMAGE_TAG=$(./tools/image-tag)
           
           CHART_VALUES_PATH=./charts/mccp/values.yaml
           # Update the MCCP chart values.yaml file with the current image tag
           make update-mccp-chart-values CHART_VALUES_PATH=$CHART_VALUES_PATH
 
           # Publish the MCCP Helm v3 chart
-          ./bin/publish-chart-to-s3.sh $TAG $IMAGE_TAG ./charts/mccp 3
+          ./bin/publish-chart-to-s3.sh $TAG $GITHUB_EVENT_NAME ./charts/mccp 3
     - name: Login to Docker Hub
       if: ${{ runner.os == 'Linux' }}
       uses: docker/login-action@v1
@@ -136,7 +135,7 @@ jobs:
         mkdir -p ${{ env.ARTEFACTS_BASE_DIR }}
         
         WKP_DEBUG=true go test -cover -coverprofile=.coverprofile ./cmd/... ./pkg/... | go-junit-report > ${{ env.ARTEFACTS_BASE_DIR }}/test-results.xml
-        cd ${{ github.workspace }}/cmd/event-writer && go test -cover -coverprofile=.coverprofile ./converter/... ./database/... ./liveness/... ./run/... ./test/... | go-junit-report > ${{ env.ARTEFACTS_BASE_DIR }}/event-writer-results.xml
+        cd ${{ github.workspace }}/cmd/event-writer && go test -cover -coverprofile=.coverprofile ./... | go-junit-report > ${{ env.ARTEFACTS_BASE_DIR }}/event-writer-results.xml
         cd ${{ github.workspace }}/common && go test -cover -coverprofile=.coverprofile ./... | go-junit-report > ${{ env.ARTEFACTS_BASE_DIR }}/common-results.xml
         cd ${{ github.workspace }}/cmd/capi-server && go test -cover -coverprofile=.coverprofile ./... | go-junit-report > ${{ env.ARTEFACTS_BASE_DIR }}/capi-server-results.xml
 
@@ -169,11 +168,9 @@ jobs:
       matrix:
         include:
           - os: ubuntu-latest
-            wego_suffix: linux-x86_64
-            os_bin_suffix: linux-amd64
+            os_name: linux
           # - os: macOS-latest
-          #   os_bin_suffix: darwin-amd64
-          #   wego_suffix: darwin-x86_64
+          #   os_name: darwin
     needs: [build, coverage]
     timeout-minutes: 90
     env:
@@ -184,12 +181,11 @@ jobs:
       DOCKER_IO_USER: ${{ secrets.WGE_DOCKER_IO_USER }} 
       DOCKER_IO_PASSWORD: ${{ secrets.WGE_DOCKER_IO_PASSWORD }}
       MCCP_BIN_PATH: ${{ github.workspace }}/cmd/mccp/mccp-${{ matrix.os }}
-      WEGO_BIN_PATH: ${{ github.workspace }}/cmd/wego/wego-${{ matrix.wego_suffix }}
-      WKP_BIN_PATH: ${{ github.workspace }}/cmd/wk/wk-v2.5.0-${{ matrix.os_bin_suffix }}
+      WEGO_BIN_PATH: ${{ github.workspace }}/cmd/wego/wego-${{ matrix.os_name }}-x86_64
+      WKP_BIN_PATH: ${{ github.workspace }}/cmd/wk/wk-v2.5.0-${{ matrix.os_name }}-amd64
       SELENIUM_DEBUG: true
       ACCEPTANCE_TESTS_DATABASE_TYPE: sqlite
       MCCP_ACCEPTANCE: true
-      CONNECT_KIND_WKP_LEAF_TEST: true
       MCCP_KIND_WKP_LEAF_KUBECONFIG: '/tmp/mccp-kind-leaf-kubeconfig'
       ARTEFACTS_BASE_DIR: /tmp/workspace/test/
     steps:
@@ -232,7 +228,7 @@ jobs:
         fi
     - name: Install clusterctl
       run: |
-        curl -L https://github.com/kubernetes-sigs/cluster-api/releases/download/v0.4.2/clusterctl-${{ matrix.os_bin_suffix }} -o clusterctl
+        curl -L https://github.com/kubernetes-sigs/cluster-api/releases/download/v0.4.2/clusterctl-${{ matrix.os_name }}-amd64 -o clusterctl
         chmod +x ./clusterctl
         sudo mv ./clusterctl /usr/local/bin/clusterctl
         clusterctl version 
@@ -253,12 +249,12 @@ jobs:
     - name: Download wego binary from GitHub
       run: |
         mkdir -p cmd/wego/
-        wget https://github.com/weaveworks/weave-gitops/releases/download/v0.2.4/wego-${{ matrix.wego_suffix }}
-        mv wego-${{ matrix.wego_suffix }} $WEGO_BIN_PATH
+        wget https://github.com/weaveworks/weave-gitops/releases/download/v0.2.4/wego-${{ matrix.os_name }}-x86_64
+        mv wego-${{ matrix.os_name }}-x86_64 $WEGO_BIN_PATH
     - name: Download wk binary from s3
       run: |
         mkdir -p cmd/wk/
-        curl -o $WKP_BIN_PATH https://s3.amazonaws.com/weaveworks-wkp/wk-v2.5.0-${{ matrix.os_bin_suffix }}        
+        curl -o $WKP_BIN_PATH https://s3.amazonaws.com/weaveworks-wkp/wk-v2.5.0-${{ matrix.os_name }}-amd64  
     - name: Change bin permissions
       run: |
         sudo chmod +x ${{ env.MCCP_BIN_PATH }}
@@ -293,10 +289,7 @@ jobs:
         # Set the CLUSTER_REPOSITORY as environment variable for subsequent steps
         echo "CLUSTER_REPOSITORY=$CLUSTER_REPOSITORY" >> $GITHUB_ENV
 
-        # Create wego-system namespace and add entitlement
-        kubectl create ns wego-system
-        kubectl apply -f ./test/utils/scripts/entitlement-secret.yaml
-        ./test/utils/scripts/ci-cluster-install.sh mccp $CLUSTER_REPOSITORY
+        ./test/utils/scripts/wego-enterprise.sh setup $CLUSTER_REPOSITORY ${{ github.workspace }}
         kubectl port-forward -n wego-system svc/my-mccp-nginx-ingress-controller 8090:80 &
     - name: Setup wkp leaf cluster
       run: |
@@ -306,14 +299,14 @@ jobs:
         export CLUSTER_NAME=leaf-${{ github.run_id }}-${{ github.run_number}}
         # Set the WKP_CLUSTER_NAME as environment variable for subsequent steps
         echo "WKP_CLUSTER_NAME=$CLUSTER_NAME" >> $GITHUB_ENV
-        ./test/utils/scripts/ci-cluster-install.sh wkp $CLUSTER_NAME ${{ github.workspace }}
+        ./test/utils/scripts/wkp.sh setup $CLUSTER_NAME ${{ github.workspace }}
 
         # Unset KUBECONFIG to let kubectl point back to the MCCP cluster under test
         unset KUBECONFIG        
     - name: Run acceptance tests
       run: |
         cd test/acceptance/test/
-        go test -ginkgo.v -v --timeout=99999s
+        go test -ginkgo.skip=@gce -ginkgo.skip=@eks -ginkgo.v -v --timeout=99999s
     - name: Delete WKP repository
       if: ${{ always() }}
       run: |
@@ -330,11 +323,17 @@ jobs:
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
-        os: [ubuntu-latest, macOS-latest]
+        include:
+          - os: ubuntu-latest
+            os_name: linux
+          - os: macOS-latest
+            os_name: darwin
     needs: [acceptance-tests]
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
     - name: Download mccp binaries
       uses: actions/download-artifact@v2
       with:
@@ -348,12 +347,12 @@ jobs:
         aws-region: eu-central-1
     - name: Publish mccp to s3
       run: |
-        TAG=$(./tools/image-tag)
+        TAG=$(git describe --always --match "v*")
         # Upload uniquely tagged binaries
-        aws s3 cp cmd/mccp/mccp-${{ matrix.os }} s3://weaveworks-wkp/mccp-${TAG}-${{ matrix.os }}
+        aws s3 cp cmd/mccp/mccp-${{ matrix.os }} s3://weaveworks-wkp/mccp-${TAG}-${{ matrix.os_name }}-amd64
 
         # Upload a "main" binary for easy access to latest main build
-        aws s3 cp cmd/mccp/mccp-${{ matrix.os }} s3://weaveworks-wkp/
+        aws s3 cp cmd/mccp/mccp-${{ matrix.os }} s3://weaveworks-wkp/mccp-latest-${{ matrix.os_name }}-amd64
 
   # publish-test-results:
   #   runs-on: ubuntu-latest
@@ -385,3 +384,4 @@ jobs:
 
   #       gocover-cobertura < results/unit-tests-artifacts/merged-profiles > coverage.xml
   #       testspace "[unit-tests]results/unit-tests-artifacts/combined-test-results.xml" "[acceptance-tests]results/acceptance-test-artifacts/acceptance-test-results.xml" "coverage.xml"
+  
