--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -81,14 +81,13 @@ jobs:
       if: ${{ runner.os == 'Linux' }}
       run: |
           TAG=$(git describe --always --match "v*")
-          IMAGE_TAG=$(./tools/image-tag)
           
           CHART_VALUES_PATH=./charts/mccp/values.yaml
           # Update the MCCP chart values.yaml file with the current image tag
           make update-mccp-chart-values CHART_VALUES_PATH=$CHART_VALUES_PATH
 
           # Publish the MCCP Helm v3 chart
-          ./bin/publish-chart-to-s3.sh $TAG $IMAGE_TAG ./charts/mccp 3
+          ./bin/publish-chart-to-s3.sh $TAG $GITHUB_EVENT_NAME ./charts/mccp 3
     - name: Login to Docker Hub
       if: ${{ runner.os == 'Linux' }}
       uses: docker/login-action@v1
@@ -495,7 +494,11 @@ jobs:
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
-        os: [ubuntu-latest, macOS-latest]
+        include:
+          - os: ubuntu-latest
+            os_name: linux
+          - os: macOS-latest
+            os_name: darwin
     needs: [test-eks]
     steps:
     - name: Checkout code
@@ -516,5 +519,5 @@ jobs:
       run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
     - name: Publish mccp to s3
       run: |
-        aws s3 cp cmd/mccp/mccp-${{ matrix.os }}-nightly s3://weaveworks-wkp/nightly/${{ steps.date.outputs.date }}/mccp-${{ matrix.os }}
+        aws s3 cp cmd/mccp/mccp-${{ matrix.os }}-nightly s3://weaveworks-wkp/nightly/${{ steps.date.outputs.date }}/mccp-${{ matrix.os_name }}-amd64
 
