--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -158,14 +158,13 @@ jobs:
     - name: Publish helm chart to s3
       run: |
         TAG=$(git describe --always --match "v*")
-        IMAGE_TAG=$(./tools/image-tag)
         
         CHART_VALUES_PATH=./charts/mccp/values.yaml
         # Update the MCCP chart values.yaml file with the current image tag
         make update-mccp-chart-values CHART_VALUES_PATH=$CHART_VALUES_PATH
 
         # Publish the MCCP Helm v3 chart
-        ./bin/publish-chart-to-s3.sh $TAG $IMAGE_TAG ./charts/mccp 3
+        ./bin/publish-chart-to-s3.sh $TAG $GITHUB_EVENT_NAME ./charts/mccp 3
     - name: Login to Docker Hub
       uses: docker/login-action@v1
       with:
