simplify the s3 folder structure for release artifacts

--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -519,5 +519,6 @@ jobs:
       run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
     - name: Publish mccp to s3
       run: |
-        aws s3 cp cmd/mccp/mccp-${{ matrix.os }}-nightly s3://weaveworks-wkp/nightly/${{ steps.date.outputs.date }}/mccp-${{ matrix.os_name }}-amd64
+        TAG=$(git describe --always --match "v*") 
+        aws s3 cp cmd/mccp/mccp-${{ matrix.os }}-nightly s3://weaveworks-wkp/nightly/mccp-{TAG}-${{ matrix.os_name }}-amd64
 
