--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,4 +1,5 @@
 on:
+  push:
   release:
     types: [published]
 
@@ -84,7 +85,7 @@ jobs:
           # Update the MCCP chart values.yaml file with the current image tag
           make update-mccp-chart-values CHART_VALUES_PATH=$CHART_VALUES_PATH
           # Publish the MCCP Helm v3 chart
-          ./bin/publish-chart-to-s3.sh $TAG $GITHUB_EVENT_NAME ./charts/mccp 3
+          ./bin/publish-chart-to-s3.sh $TAG release ./charts/mccp 3
     - name: Login to Docker Hub
       if: ${{ runner.os == 'Linux' }}
       uses: docker/login-action@v1
@@ -122,5 +123,8 @@ jobs:
         aws-region: us-east-1
     - name: Publish mccp to s3
       run: |
-        # aws s3 cp cmd/mccp/mccp-${{ matrix.os }}-release s3://weaveworks-wkp/release/${{ github.event.release.tag_name }}/mccp-${{ matrix.os_name }}-amd64
-        aws s3 cp cmd/mccp/mccp-${{ matrix.os }}-release s3://weaveworks-wkp/release/v0.04/mccp-${{ matrix.os_name }}-amd64
+        TAG=$(git describe --always --match "v*")   
+        aws s3 cp cmd/mccp/mccp-${{ matrix.os }}-release s3://weaveworks-wkp/releases/mccp-${TAG}-${{ matrix.os_name }}-amd64
+
+        # Upload a "latest" binary for easy access to latest release build
+        aws s3 cp cmd/mccp/mccp-${{ matrix.os }}-release s3://weaveworks-wkp/releases/mccp-latest-${{ matrix.os_name }}-amd64
