--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -1,5 +1,4 @@
 on:
-  push:
   schedule:
     - cron: '10 0 * * *'
   workflow_dispatch:
@@ -88,8 +87,7 @@ jobs:
           make update-mccp-chart-values CHART_VALUES_PATH=$CHART_VALUES_PATH
 
           # Publish the MCCP Helm v3 chart
-          # ./bin/publish-chart-to-s3.sh $TAG $GITHUB_EVENT_NAME ./charts/mccp 3
-          ./bin/publish-chart-to-s3.sh $TAG schedule ./charts/mccp 3
+          ./bin/publish-chart-to-s3.sh $TAG $GITHUB_EVENT_NAME ./charts/mccp 3
     - name: Login to Docker Hub
       if: ${{ runner.os == 'Linux' }}
       uses: docker/login-action@v1
@@ -275,14 +273,14 @@ jobs:
       run: |
         # decode EKS kubeconfig and store at path set in MCCP_EKS_LEAF_KUBECONFIG
         echo $WGE_ACCEPTANCE_EKS_KUBECONFIG | base64 -d > $MCCP_EKS_LEAF_KUBECONFIG
-    # - name: Run acceptance tests
-    #   run: |
-    #     cd test/acceptance/test/
-    #     if [ "$RUNNER_OS" == "macOS" ]; then
-    #       go test -ginkgo.skip=@gce -ginkgo.skip=@wkp -ginkgo.skip=@capd -ginkgo.v -v --timeout=99999s
-    #     else
-    #       go test -ginkgo.skip=@gce -ginkgo.skip=@capd -ginkgo.v -v --timeout=99999s
-    #     fi
+    - name: Run acceptance tests
+      run: |
+        cd test/acceptance/test/
+        if [ "$RUNNER_OS" == "macOS" ]; then
+          go test -ginkgo.skip=@gce -ginkgo.skip=@wkp -ginkgo.skip=@capd -ginkgo.v -v --timeout=99999s
+        else
+          go test -ginkgo.skip=@gce -ginkgo.skip=@capd -ginkgo.v -v --timeout=99999s
+        fi
     - name: Reset EKS management cluster
       if: ${{ always() }}
       continue-on-error: true
@@ -522,5 +520,5 @@ jobs:
     - name: Publish mccp to s3
       run: |
         TAG=$(./tools/image-tag)
-        aws s3 cp cmd/mccp/mccp-${{ matrix.os }}-nightly s3://weaveworks-wkp/nightly/mccp-{TAG}-${{ matrix.os_name }}-amd64
+        aws s3 cp cmd/mccp/mccp-${{ matrix.os }}-nightly s3://weaveworks-wkp/nightly/mccp-${TAG}-${{ matrix.os_name }}-amd64
 
