--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -85,8 +85,7 @@ jobs:
           # Update the MCCP chart values.yaml file with the current image tag
           make update-mccp-chart-values CHART_VALUES_PATH=$CHART_VALUES_PATH
           # Publish the MCCP Helm v3 chart
-          # ./bin/publish-chart-to-s3.sh $TAG $GITHUB_EVENT_NAME ./charts/mccp 3
-          ./bin/publish-chart-to-s3.sh $TAG releases ./charts/mccp 3
+          ./bin/publish-chart-to-s3.sh $TAG $GITHUB_EVENT_NAME ./charts/mccp 3
     - name: Login to Docker Hub
       if: ${{ runner.os == 'Linux' }}
       uses: docker/login-action@v1
@@ -124,7 +123,7 @@ jobs:
         aws-region: us-east-1
     - name: Publish mccp to s3
       run: |
-        TAG=$(./tools/image-tag) 
+        TAG=$(git describe --always --match "v*")
         aws s3 cp cmd/mccp/mccp-${{ matrix.os }}-release s3://weaveworks-wkp/releases/mccp-${TAG}-${{ matrix.os_name }}-amd64
 
         # Upload a "latest" binary for easy access to latest release build
