--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -82,14 +82,13 @@ jobs:
       if: ${{ runner.os == 'Linux' }}
       run: |
           TAG=$(git describe --always --match "v*")
-          IMAGE_TAG=$(./tools/image-tag)
           
           CHART_VALUES_PATH=./charts/mccp/values.yaml
           # Update the MCCP chart values.yaml file with the current image tag
           make update-mccp-chart-values CHART_VALUES_PATH=$CHART_VALUES_PATH
 
           # Publish the MCCP Helm v3 chart
-          ./bin/publish-chart-to-s3.sh $TAG $IMAGE_TAG ./charts/mccp 3
+          ./bin/publish-chart-to-s3.sh $TAG $GITHUB_EVENT_NAME ./charts/mccp 3
     - name: Login to Docker Hub
       if: ${{ runner.os == 'Linux' }}
       uses: docker/login-action@v1
@@ -324,11 +323,17 @@ jobs:
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
-        os: [ubuntu-latest, macOS-latest]
+        include:
+          - os: ubuntu-latest
+            os_name: linux
+          - os: macOS-latest
+            os_name: darwin
     needs: [acceptance-tests]
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
     - name: Download mccp binaries
       uses: actions/download-artifact@v2
       with:
@@ -342,12 +347,12 @@ jobs:
         aws-region: eu-central-1
     - name: Publish mccp to s3
       run: |
-        TAG=$(./tools/image-tag)
+        TAG=$(git describe --always --match "v*")
         # Upload uniquely tagged binaries
-        aws s3 cp cmd/mccp/mccp-${{ matrix.os }} s3://weaveworks-wkp/mccp-${TAG}-${{ matrix.os }}
+        aws s3 cp cmd/mccp/mccp-${{ matrix.os }} s3://weaveworks-wkp/mccp-${TAG}-${{ matrix.os_name }}-amd64
 
         # Upload a "main" binary for easy access to latest main build
-        aws s3 cp cmd/mccp/mccp-${{ matrix.os }} s3://weaveworks-wkp/
+        aws s3 cp cmd/mccp/mccp-${{ matrix.os }} s3://weaveworks-wkp/mccp-latest-${{ matrix.os_name }}-amd64
 
   # publish-test-results:
   #   runs-on: ubuntu-latest
@@ -379,3 +384,4 @@ jobs:
 
   #       gocover-cobertura < results/unit-tests-artifacts/merged-profiles > coverage.xml
   #       testspace "[unit-tests]results/unit-tests-artifacts/combined-test-results.xml" "[acceptance-tests]results/acceptance-test-artifacts/acceptance-test-results.xml" "coverage.xml"
+  
