--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,6 +1,6 @@
 on:
-  release:
-    types: [published]
+  push:
+    tags: [v*.*.*]
 
 name: release
 jobs:
@@ -19,6 +19,13 @@ jobs:
         echo "::set-output name=dir::$(yarn cache dir)"
         echo "::set-output name=go-build::$(go env GOCACHE)"
         echo "::set-output name=go-mod::$(go env GOMODCACHE)"
+    - name: Get TAG
+      id: tag
+      uses: dawidd6/action-get-tag@v1
+    - name: Set environment variable
+      run: |
+        TAG=$(echo $(git describe --always --match "v*") | sed "s/^v[0-9].[0-9].[0-9]/${{ steps.tag.outputs.tag }}/")
+        echo "TAG=$TAG" >> $GITHUB_ENV
     - name: Install Go
       uses: actions/setup-go@v2
       with:
@@ -57,7 +64,8 @@ jobs:
         elif [ "$RUNNER_OS" == "Linux" ]; then
           make -j4 GITHUB_BUILD_TOKEN=${GITHUB_BUILD_TOKEN}
         fi
-        mv cmd/mccp/mccp cmd/mccp/mccp-${{ matrix.os }}-release
+
+        mv cmd/mccp/mccp cmd/mccp/mccp-${{ env.TAG }}-${{ matrix.os_name }}-amd64
     - name: Store mccp binaries
       uses: actions/upload-artifact@v2
       with:
@@ -78,8 +86,7 @@ jobs:
         aws-region: us-east-1
     - name: Publish helm chart to s3
       if: ${{ runner.os == 'Linux' }}
-      run: |
-          TAG=$(git describe --always --match "v*")          
+      run: |      
           CHART_VALUES_PATH=./charts/mccp/values.yaml
           # Update the MCCP chart values.yaml file with the current image tag
           make update-mccp-chart-values CHART_VALUES_PATH=$CHART_VALUES_PATH
@@ -96,15 +103,8 @@ jobs:
       if: ${{ runner.os == 'Linux' }}
       run: make push
       
-  publish-binaries:
-    runs-on: ${{matrix.os}}
-    strategy:
-      matrix:
-        include:
-          - os: ubuntu-latest
-            os_name: linux
-          - os: macOS-latest
-            os_name: darwin
+  releaser:
+    runs-on: ubuntu-latest
     needs: [build]
     steps:
     - name: Checkout code
@@ -122,10 +122,23 @@ jobs:
         aws-access-key-id: ${{ secrets.WGE_S3_AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.WGE_S3_AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-1
+    - name: Get TAG
+      id: tag
+      uses: dawidd6/action-get-tag@v1
+    - name: Set environment variable
+      run: |
+        TAG=$(echo $(git describe --always --match "v*") | sed "s/^v[0-9].[0-9].[0-9]/${{ steps.tag.outputs.tag }}/")
+        echo "TAG=$TAG" >> $GITHUB_ENV
     - name: Publish mccp to s3
       run: |
-        TAG=$(git describe --always --match "v*")
-        aws s3 cp cmd/mccp/mccp-${{ matrix.os }}-release s3://weaveworks-wkp/releases/mccp-${TAG}-${{ matrix.os_name }}-amd64
-
-        # Upload a "latest" binary for easy access to latest release build
-        aws s3 cp cmd/mccp/mccp-${{ matrix.os }}-release s3://weaveworks-wkp/releases/mccp-latest-${{ matrix.os_name }}-amd64
+        aws s3 cp mccp-${{ env.TAG }}-${{ matrix.os_name }}-amd64 s3://weaveworks-wkp/releases/mccp-${{ env.TAG }}-linux-amd64
+        aws s3 cp mccp-${{ env.TAG }}-${{ matrix.os_name }}-amd64 s3://weaveworks-wkp/releases/mccp-${{ env.TAG }}-darwin-amd64
+    - name: Release
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        prerelease: true
+        fail_on_unmatched_files: true
+        files: |
+          cmd/mccp/mccp-${{ env.TAG }}-linux-amd64
+          cmd/mccp/mccp-${{ env.TAG }}-darwin-amd64
