Remove if condition for port number

--- a/charts/mccp/templates/clusters-service/internal-ingress.yaml
+++ b/charts/mccp/templates/clusters-service/internal-ingress.yaml
@@ -19,4 +19,4 @@ spec:
     - http:
         paths:
           - path: /v1/?(.*)
-            backend: {{- include "common.ingress.backend" (dict "serviceName" "clusters-service" "servicePort" 8000 "context" $)  | nindent 14 }}
+            backend: {{- include "common.ingress.backend" (dict "serviceName" "clusters-service" "servicePort" "8000" "context" $)  | nindent 14 }}
