--- a/charts/mccp/templates/clusters-service/internal-ingress.yaml
+++ b/charts/mccp/templates/clusters-service/internal-ingress.yaml
@@ -18,5 +18,5 @@ spec:
   rules:
     - http:
         paths:
-          - backend: {{- include "common.ingress.backend" (dict "serviceName" "clusters-service" "servicePort" 8000 "context" $)  | nindent 14 }}
-            path: /v1/?(.*)
+          - path: /v1/?(.*)
+            backend: {{- include "common.ingress.backend" (dict "serviceName" "clusters-service" "servicePort" 8000 "context" $)  | nindent 14 }}
