Test with static data

--- a/charts/mccp/templates/gitops-repo-broker/internal-ingress.yaml
+++ b/charts/mccp/templates/gitops-repo-broker/internal-ingress.yaml
@@ -18,5 +18,7 @@ spec:
   rules:
     - http:
         paths:
-          - path: /gitops/?(.*)
-            backend: {{- include "common.ingress.backend" (dict "serviceName" "gitops-repo-broker" "servicePort" 8000 "context" $)  | nindent 14 }}
+          - backend:
+              serviceName: gitops-repo-broker
+              servicePort: 8000
+            path: /gitops/?(.*)
