--- a/charts/mccp/templates/clusters-service/internal-ingress.yaml
+++ b/charts/mccp/templates/clusters-service/internal-ingress.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: {{ template "common.capabilities.ingress.apiVersion" . }}
+apiVersion: {{ include "common.capabilities.ingress.apiVersion" (dict "kubeVersion" .Capabilities.KubeVersion.GitVersion "context" $) }}
 kind: Ingress
 metadata:
   annotations:
