Adds a PVC to the helm chart by default
- Can stil use host volume if you really really want

--- a/charts/mccp/templates/clusters-service/deployment.yaml
+++ b/charts/mccp/templates/clusters-service/deployment.yaml
@@ -75,8 +75,8 @@ spec:
         hostPath:
           path: {{ .Values.dbConfig.sqliteConfig.path }}
         {{- end }}
-        {{- if .Values.dbConfig.sqliteConfig.persistentVolumeClaim }}
+        {{- if .Values.dbConfig.sqliteConfig.persistentVolumeClaim.enabled }}
         persistentVolumeClaim:
-          claimName: mccp-volume
+          claimName: {{ .Values.dbConfig.sqliteConfig.persistentVolumeClaim.existingClaimName | default "wge-volume" }}
         {{- end }}
       {{- end }}
