Try a trick to force tags down to fix `git describe`
https://github.com/actions/checkout/issues/290

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -157,6 +157,7 @@ jobs:
         aws-region: eu-central-1
     - name: Publish helm chart to s3
       run: |
+        git fetch --tags --force
         TAG=$(git describe --always --match "v*")
         
         CHART_VALUES_PATH=./charts/mccp/values.yaml
