--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -80,6 +80,7 @@ jobs:
     - name: Publish helm chart to s3
       if: ${{ runner.os == 'Linux' }}
       run: |
+          git fetch --tags --force
           TAG=$(git describe --always --match "v*")
           
           CHART_VALUES_PATH=./charts/mccp/values.yaml
@@ -521,6 +522,7 @@ jobs:
       run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
     - name: Publish mccp to s3
       run: |
+        git fetch --tags --force
         TAG=$(git describe --always --match "v*")
         aws s3 cp cmd/mccp/mccp-${{ matrix.os }}-nightly s3://weaveworks-wkp/nightly/mccp-${TAG}-${{ matrix.os_name }}-amd64
 
