--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -119,6 +119,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         fetch-depth: 0
+        ref: ${{ github.event.pull_request.head.sha }}
     - name: Go Build Cache
       uses: actions/cache@v2
       with:
@@ -336,6 +337,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         fetch-depth: 0
+        ref: ${{ github.event.pull_request.head.sha }}
     - name: Go Build Cache
       uses: actions/cache@v2
       with:
@@ -461,6 +463,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         fetch-depth: 0 
+        ref: ${{ github.event.pull_request.head.sha }}
     - name: Go Build Cache
       uses: actions/cache@v2
       with:
