tag workflow with head sha

--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -28,6 +28,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
       with:
+        ref: ${{ github.event.pull_request.head.sha }}
         fetch-depth: 0
     - name: Go Build Cache
       uses: actions/cache@v2
