Try a trick to force tags down to fix `git describe` (#114)
* Try a trick to force tags down to fix `git describe`

https://github.com/actions/checkout/issues/290

* no merge commit for PRs..

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -23,6 +23,11 @@ jobs:
         echo "::set-output name=dir::$(yarn cache dir)"
         echo "::set-output name=go-build::$(go env GOCACHE)"
         echo "::set-output name=go-mod::$(go env GOMODCACHE)"
+    - name: Set environment variable
+      run: |
+        git fetch --tags --force
+        TAG=$(git describe --always --match "v*")
+        echo "TAG=$TAG" >> $GITHUB_ENV
     - name: Install Go
       uses: actions/setup-go@v2
       with:
@@ -52,12 +57,10 @@ jobs:
         key: ${{ runner.os }}-${{ env.YARN_CACHE_NAME }}-${{ hashFiles('**/yarn.lock') }}
         restore-keys: |
           ${{ runner.os }}-${{ env.YARN_CACHE_NAME }}-
-    - name: Get TAG
-      id: tag
-      uses: dawidd6/action-get-tag@v1
     - name: Set environment variable
       run: |
-        TAG=$(echo $(git describe --always --match "v*") | sed "s/^v[0-9].[0-9].[0-9]/${{ steps.tag.outputs.tag }}/")
+        git fetch --tags --force
+        TAG=$(git describe --always --match "v*")
         echo "TAG=$TAG" >> $GITHUB_ENV
     - name: Build all the services
       env:
@@ -126,12 +129,10 @@ jobs:
         aws-access-key-id: ${{ secrets.WGE_S3_AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.WGE_S3_AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-1
-    - name: Get TAG
-      id: tag
-      uses: dawidd6/action-get-tag@v1
     - name: Set environment variable
       run: |
-        TAG=$(echo $(git describe --always --match "v*") | sed "s/^v[0-9].[0-9].[0-9]/${{ steps.tag.outputs.tag }}/")
+        git fetch --tags --force
+        TAG=$(git describe --always --match "v*")
         echo "TAG=$TAG" >> $GITHUB_ENV
     - name: Publish mccp to s3
       run: |
