--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -119,6 +119,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         fetch-depth: 0
+        ref: ${{ github.event.pull_request.head.sha }}
     - name: Go Build Cache
       uses: actions/cache@v2
       with:
@@ -157,6 +158,7 @@ jobs:
         aws-region: eu-central-1
     - name: Publish helm chart to s3
       run: |
+        git fetch --tags --force
         TAG=$(git describe --always --match "v*")
         
         CHART_VALUES_PATH=./charts/mccp/values.yaml
@@ -335,6 +337,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         fetch-depth: 0
+        ref: ${{ github.event.pull_request.head.sha }}
     - name: Go Build Cache
       uses: actions/cache@v2
       with:
@@ -460,6 +463,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         fetch-depth: 0 
+        ref: ${{ github.event.pull_request.head.sha }}
     - name: Go Build Cache
       uses: actions/cache@v2
       with:
