rename lable workflow file

--- a/.github/workflows/label.yaml
+++ b/.github/workflows/label.yaml
@@ -1,7 +1,7 @@
 on: 
   pull_request:
     types: [opened, labeled, unlabeled, synchronize]
-name: label-PR
+name: label
 jobs:
   labelCheck:
     runs-on: ubuntu-latest
