--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,6 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       GO_CACHE_NAME: cache-go-modules
+      GL_DEBUG: loader
     steps:
     - id: go-cache-paths
       run: |
@@ -16,7 +17,7 @@ jobs:
     - name: Install Go
       uses: actions/setup-go@v2
       with:
-        go-version: 1.16.x
+        go-version: 1.17.x
     - name: Configure git for private modules
       env:
         GITHUB_BUILD_USERNAME: wge-build-bot
